--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-imagemin": "^6.2.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-strip-comments": "^2.5.2",
     "gulp-terser": "^1.2.0"
   },
   "repository": {
